# career-studio-backend

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.ci  README.md  docker-compose.ci.yml  docker-compose.yml  logging.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: build.yml  cd.yml  ci.yml
.hooks/: format_staged.py  mypy_staged.py  staged.sh
docs/: schema-code.txt
prisma/: schema.prisma
prisma/migrations/20250519090142_init/: migration.sql
prisma/migrations/20250523094916_enhance/: migration.sql
prisma/migrations/20250523105959_init/: migration.sql
prisma/migrations/20250525104517_update_user_table/: migration.sql
prisma/migrations/20250526185824_user_update/: migration.sql
prisma/migrations/20250616063937_link_education_cv_to_user/: migration.sql
prisma/migrations/20250616081432_honors_optional/: migration.sql
prisma/migrations/20250622022008_remove_preview_url_field/: migration.sql
prisma/migrations/20250622024356_parent_cv_version/: migration.sql
prisma/migrations/20250622103233_resource_url_in_publication/: migration.sql
prisma/migrations/20250622104319_on_delete/: migration.sql
prisma/migrations/20250622130240_unlink_resourceurl/: migration.sql
prisma/migrations/20250630041701_title_field_in_cv_default_version_number/: migration.sql
prisma/migrations/20250707025005_achievement_cv_title/: migration.sql
prisma/migrations/20250707031006_fix/: migration.sql
prisma/migrations/20250707031127_/: migration.sql
prisma/migrations/20250707141414_lastest_version_id_default_0/: migration.sql
prisma/migrations/20250707150048_revert/: migration.sql
prisma/migrations/20250728150931_portfolio_update/: migration.sql
prisma/migrations/20250729121658_update_portfolio_publication/: migration.sql
prisma/migrations/20250729170744_make_company_logo_optional/: migration.sql
prisma/migrations/20250729204815_ai_request_limiting/: migration.sql
prisma/migrations/20250729205725_monthly_limit_upgrade/: migration.sql
prisma/migrations/20250729222209_resume_analysis/: migration.sql
src/: app.py  config.py  constants.py  database.py  firebase.py  logger.py  middlewares.py  opeanapi.py  server.py  util.py
src/ai/: constants.py  docs.py  exceptions.py  resume_analyzer.py  router.py  schemas.py  service.py
src/auth/: constants.py  docs.py  exceptions.py  router.py  schemas.py  service.py
src/certificate/: constants.py  docs.py  exceptions.py  router.py  schemas.py  service.py
src/cv/: constants.py  docs.py  exceptions.py  generator.py  router.py  schemas.py  service.py  services.py
src/cv/templates/1/: template.html  template.tex
src/cv/templates/2/: template.html  template.tex
src/education/: docs.py  exceptions.py  router.py  schemas.py  service.py
src/job/: docs.py  router.py  schemas.py
src/portfolio/: constants.py  docs.py  exceptions.py  router.py  schemas.py  service.py
src/users/: constants.py  docs.py  exceptions.py  router.py  schemas.py  service.py
tests/: conftest.py  test_app_middlewares.py  test_auth.py  test_certificate.py  test_education.py  test_setup_tokens.py  test_user.py  test_util.py
