[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Initial Setup"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = { extras = ["all"], version = ">=0.115.12,<0.116.0" }

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.8"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
plugins = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
