[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Initial Setup"
authors = ["icarus77"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
grpcio = "^1.74.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
colorlog = "^6.9.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
setuptools = "^80.7.1"
prisma = "^0.15.0"
pydantic-settings = "^2.9.1"
firebase-admin = "^7.0.0"
phonenumbers = "^9.0.7"
fastapi-cache2 = "^0.2.2"
redis = "^6.2.0"
supabase = "^2.15.3"
jinja2 = "^3.1.6"
requests = "^2.32.4"
python-dotenv = "^1.1.1"
httpx = "^0.28.1"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.0.0"
codename = "^1.1"
ruff = "^0.12.2"
uvicorn = "^0.35.0"
fastapi = "^0.116.0"
email-validator = "^2.2.0"
python-multipart = "^0.0.20"
groq = "^0.30.0"
google-generativeai = "^0.8.5"
pdfplumber = "^0.11.7"
python-docx = "^1.2.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_glob = ["src/prisma_client/*"]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
exclude = ["src/prisma_client", "src/prisma_client/*"]

[[tool.mypy.overrides]]
module = "src.prisma_client.*"
ignore_errors = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["firebase_admin", "firebase_admin.*"]
follow_untyped_imports = false
ignore_missing_imports = true
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
